--- a/example/index.html
+++ b/example/index.html
@@ -4,6 +4,9 @@
 	<head>
 		<title>LightBoxFu</title>
 	    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<style type="text/css">
+			html, body {padding: 0px; margin: 0px;}
+		</style>
 		<script src="../lib/jquery.js"></script>
 		<script src="../jquery.lightBoxFu.js"></script>
 		<script type="text/javascript">
