Images path should be the same for all images

--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,7 @@
 		<script src="../jquery.lightBoxFu.js"></script>
 		<script type="text/javascript">
 			$(function() {
-				$.lightBoxFu.initialize({imagesPath: '../images/', stylesheetsPath: '../stylesheets/'});
+				$.lightBoxFu.initialize({imagesPath: 'images/', stylesheetsPath: '../stylesheets/'});
      			$('.normal').lightBoxFu({html: "<strong>Some</strong> nasty text!"});
      			$('.no-close').lightBoxFu({html: "You can't <strong>close</strong> me!", closeOnClick: false});
 			});
